# Taskfusion

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  init-db.sql  main.py  pyproject.toml  seed.py  update_readme_mysql.py
app/: __init__.py  main.py
app/core/: __init__.py  config.py  database.py
app/models/: __init__.py  project.py  task.py
app/repositories/: __init__.py  base.py  project.py  task.py
app/routers/: __init__.py  dashboard.py  projects.py  tasks.py  views.py
app/schemas/: __init__.py  dashboard.py  project.py  task.py
app/services/: __init__.py  dashboard.py  project.py  task.py
app/static/: index.html
app/static/assets/: index-DZXZz8rl.css  index-iJnfWTh0.js
app/static/css/: mobile-menu.css  styles.css
app/static/js/: dashboard.js  kanban.js  mobile-nav.js  relative-time.js  utils.js
app/templates/: base.html  dashboard.html  kanban.html
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/components/dashboard/: StatsCard.tsx
frontend/src/components/kanban/: KanbanBoard.tsx  KanbanColumn.tsx  NewTaskModal.tsx  TaskCard.tsx
frontend/src/components/projects/: ProjectManagerModal.tsx  ProjectSelector.tsx
frontend/src/components/ui/: Badge.tsx  Card.tsx  ConfirmDialog.tsx
frontend/src/pages/: Dashboard.tsx  Kanban.tsx  Login.tsx  NotFound.tsx
frontend/src/services/: dashboard.ts  projects.ts  tasks.ts
frontend/src/types/: index.ts
