[project]
name = "taskfusion"
version = "1.0.0"
description = "Mini Kanban + Analytics Dashboard"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.129.0",
    "jinja2>=3.1.6",
    "mysqlclient>=2.2.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.46",
    "uvicorn[standard]>=0.41.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = []
